--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Kids Task Tracker" />
+    <meta name="description" content="Pitch Pro Challenge" />
     <link
       rel="apple-touch-icon"
       sizes="57x57"
@@ -81,7 +81,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Task Tracker</title>
+    <title>Pitch Pro Challenge</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
